--- a/app/src/main/res/values-it/strings_settings.xml
+++ b/app/src/main/res/values-it/strings_settings.xml
@@ -126,6 +126,7 @@
     <string name="setting_manage_account">Gestisci profilo</string>
     <string name="setting_enable_keyboard_control">Abilita i controlli con la tastiera</string>
     <string name="setting_enable_baby_stepping">Abilita il Baby Stepping</string>
+    <string name="settings_octoprint_credentials">Credenziali del server OctoPrint</string>
 
     <string name="setting_enable_baby_stepping_tip">Consentire di spostare l\'asse in modo trasparente sul sistema di movimento</string>
     <string name="setting_enable_keyboard_control_tip">Controlla l\'interfaccia con una tastiera fisica</string>
