--- a/app/src/main/res/values-nl/strings_settings.xml
+++ b/app/src/main/res/values-nl/strings_settings.xml
@@ -127,6 +127,7 @@
     <string name="setting_manage_account">Beheer account</string>
     <string name="setting_enable_keyboard_control">Schakel besturingselementen met toetsenbord in</string>
     <string name="setting_enable_baby_stepping">Schakel de baby-stepping in</string>
+    <string name="settings_octoprint_credentials">OctoPrint-serverreferenties</string>
 
     <string name="setting_enable_baby_stepping_tip">Laat toe de as transparant naar het bewegingssysteem te verplaatsen</string>
     <string name="setting_enable_keyboard_control_tip">Bedien de interface met een fysiek toetsenbord</string>
