--- a/app/src/main/res/values-ru/strings_profiles.xml
+++ b/app/src/main/res/values-ru/strings_profiles.xml
@@ -104,4 +104,15 @@
 
     <string name="profile_last_connection">Последнее соединение %s назад</string>
 
+    <string name="config_printer_name_help">Дайте имя этому профилю для лучшего опыта</string>
+    <string name="config_lan_ip_help">IP-адрес локальной сети (или имя хоста) - это адрес, используемый для доступа к вашему серверу в локальной сети. Не определяйте порт для использования значения по умолчанию</string>
+    <string name="config_wan_ip_help">WAN IP (или имя хоста) - это публичный адрес вашего роутера для доступа к вашему серверу из Интернета. Пожалуйста, прочитайте инструкции, доступные на https://printoid.net</string>
+    <string name="config_api_key_help">Ваш ключ API сервера OctoPrint можно найти в настройках его веб-интерфейса, в разделе API</string>
+
+    <string name="config_ssl_help">HTTPS (с протоколами SSL/TLS) обеспечивает защищенную связь с вашим сервером. Это нужно сначала активировать в конфигурации вашего сервера</string>
+    <string name="config_basic_auth_help">Учетные данные базовой аутентификации HTTP. Это нужно сначала активировать в конфигурации вашего сервера</string>
+    <string name="config_octoprint_credentials_help">Учетные данные, которые вы используете для входа в веб-интерфейс OctoPrint. Это может потребоваться для интеграции терминала и плагинов</string>
+    <string name="config_ssh_credentials_help">Учетные данные, которые вы используете для входа на хост-компьютер вашего сервера, используются для функции пользовательских команд SSH. Определите значение общего порта для удаленного доступа SSH, если это необходимо</string>
+
+
 </resources>
