[DEV][12.06] Toast on baby stepping command sent

--- a/app/src/main/res/values-de/strings_alerts.xml
+++ b/app/src/main/res/values-de/strings_alerts.xml
@@ -100,4 +100,6 @@
     <string name="notif_overlay_running_title">Streaming über Overlay geöffnet</string>
     <string name="notif_overlay_running_message">Klicken Sie hier, um den Streamingdienst zu schließen</string>
 
+    <string name="alert_baby_stepping_sent">Baby Stepping %s geschickt</string>
+
 </resources>
