--- a/app/src/main/res/values-ru/strings_alerts.xml
+++ b/app/src/main/res/values-ru/strings_alerts.xml
@@ -100,4 +100,6 @@
     <string name="notif_overlay_running_title">Текущее видео</string>
     <string name="notif_overlay_running_message">Нажмите здесь, чтобы закрыть видео</string>
 
+    <string name="alert_baby_stepping_sent">Baby Stepping %s послал</string>
+
 </resources>
