--- a/app/src/main/res/values-pt/strings_alerts.xml
+++ b/app/src/main/res/values-pt/strings_alerts.xml
@@ -110,4 +110,6 @@
     <string name="notif_overlay_running_title">Streaming por overlay aberto</string>
     <string name="notif_overlay_running_message">Clique aqui para fechar o serviço de streaming</string>
 
+    <string name="alert_baby_stepping_sent">Baby Stepping %s enviei</string>
+
 </resources>
