--- a/app/src/main/res/values-es/strings_settings.xml
+++ b/app/src/main/res/values-es/strings_settings.xml
@@ -221,6 +221,8 @@
     <string name="setting_connection_ip_selection_mode_tip">Cómo la aplicación debe seleccionar las IP para conectar OctoPrint</string>
     <string name="setting_tplink_plugin_ip_tip">La dirección IP LAN de su TP Link Smartplug</string>
     <string name="setting_ssl_mode_tip">Use HTTPS en LAN y/o WAN</string>
+    <string name="setting_certificate_tip">Archivo de certificado SSL/TLS</string>
+    <string name="setting_certificate_select_tip">Seleccionar…</string>
 
     <string name="setting_hint_login">Nombre de usuario</string>
     <string name="setting_hint_pwd">Contraseña</string>
