--- a/app/src/main/res/values-fr/strings_state.xml
+++ b/app/src/main/res/values-fr/strings_state.xml
@@ -64,10 +64,10 @@
     <string name="date_years">%d ans</string>
 
     <string name="progress">Progression :</string>
-    <string name="progress_label_time">temps</string>
-    <string name="progress_label_gcode">gcode</string>
-    <string name="progress_label_time_percent">temps (%.1f%%)</string>
-    <string name="progress_label_gcode_percent">gcode (%.1f%%)</string>
+    <string name="progress_label_time">Estimation</string>
+    <string name="progress_label_gcode">Réel</string>
+    <string name="progress_label_time_percent">Estimation (%.1f%%)</string>
+    <string name="progress_label_gcode_percent">Réel (%.1f%%)</string>
 
     <string name="printing_completed_success_title">Impression terminée</string>
     <string name="printing_completed_success_message">Impression terminée avec succès !</string>
