--- a/app/src/main/res/values-es/strings_state.xml
+++ b/app/src/main/res/values-es/strings_state.xml
@@ -64,10 +64,10 @@
     <string name="date_years">%d años</string>
 
     <string name="progress">Progreso :</string>
-    <string name="progress_label_time">tiempo</string>
-    <string name="progress_label_gcode">Gcode</string>
-    <string name="progress_label_time_percent">tiempo (%.1f%%)</string>
-    <string name="progress_label_gcode_percent">Gcode (%.1f%%)</string>
+    <string name="progress_label_time">Esperado</string>
+    <string name="progress_label_gcode">Real</string>
+    <string name="progress_label_time_percent">Esperado (%.1f%%)</string>
+    <string name="progress_label_gcode_percent">Real (%.1f%%)</string>
 
     <string name="printing_completed_success_title">La impresión terminó</string>
     <string name="printing_completed_success_message">¡La impresión terminó con éxito!</string>
