--- a/app/src/main/res/values-pt/strings_state.xml
+++ b/app/src/main/res/values-pt/strings_state.xml
@@ -70,10 +70,10 @@
     <string name="date_years">%d anos</string>
 
     <string name="progress">Progresso:</string>
-    <string name="progress_label_time">tempo</string>
-    <string name="progress_label_gcode">GCODE</string>
-    <string name="progress_label_time_percent">tempo (%.1f%%)</string>
-    <string name="progress_label_gcode_percent">GCODE (%.1f%%)</string>
+    <string name="progress_label_time">Esperado</string>
+    <string name="progress_label_gcode">Real</string>
+    <string name="progress_label_time_percent">Esperado (%.1f%%)</string>
+    <string name="progress_label_gcode_percent">Real (%.1f%%)</string>
 
     <string name="printing_completed_success_title">Impressão finalizada</string>
     <string name="printing_completed_success_message">A impressão terminou com sucesso!</string>
