--- a/app/src/main/res/values-de/strings_menu.xml
+++ b/app/src/main/res/values-de/strings_menu.xml
@@ -32,6 +32,7 @@
     <string name="menu_plugins">Die Plugins von OctoPrint</string>
     <string name="menu_tos">Nutzungsbedingungen</string>
     <string name="menu_printer_tools">Druckerwerkzeuge</string>
+    <string name="menu_gcode_scripts">Gcode-Skripte</string>
 
     <string name="menu_lite_label_promote">Magst du Printoid Lite?</string>
     <string name="menu_lite_text_promote">Entfernen Sie Anzeigen und genießen Sie PRO und PREMIUM mit allen Funktionen!</string>
