--- a/app/src/main/res/values/strings_plugins.xml
+++ b/app/src/main/res/values/strings_plugins.xml
@@ -4,7 +4,7 @@
     <string name="plugins_title">OctoPrint\'s plugins</string>
 
     <string name="plugins_help_title">OctoPrint\'s plugins</string>
-    <string name="plugins_help_message">This is the list of plugins currently integrated in Printoid.\n\nAll OctoPrint\'s plugin are not implemented in Printoid and I (the developer) can not integrated them all.\n\nPlease contact me at printoid.for.octoprint@gmail.com if you would like to see a new plugin in Printoid. I will reflect on its integration (if and only it is possible).</string>
+    <string name="plugins_help_message">This is the list of plugins currently integrated in Printoid.\n\nAll OctoPrint\'s plugin are not implemented in Printoid and I (the developer) can not integrated them all.\n\nPlease contact me at contact@printoid.net if you would like to see a new plugin in Printoid. I will reflect on its integration (if and only it is possible).</string>
 
     <string name="plugin_name_psu" translatable="false">PSU Control</string>
     <string name="plugin_name_autoshutdown" translatable="false">Automatic Shutdown</string>
