--- a/app/src/main/res/values/strings_hub.xml
+++ b/app/src/main/res/values/strings_hub.xml
@@ -5,4 +5,7 @@
 
     <string name="hub_start_description">The status of all your 3D printers on the same screen!</string>
 
+    <string name="hub_no_managed_profiles">Add one of your OctoPrint profiles or more in this board to see their status!</string>
+    <string name="hub_profile_already_managed">Your OctoPrint profile \'%s\' is already available in Printoid Hub</string>
+
 </resources>
