[DEBUG][12.06] Change "expected progress" to "expected"

--- a/app/src/main/res/values/strings_state.xml
+++ b/app/src/main/res/values/strings_state.xml
@@ -72,8 +72,8 @@
     <string name="progress">Progress:</string>
     <string name="progress_label_time">Expected progress</string>
     <string name="progress_label_gcode">Real progress</string>
-    <string name="progress_label_time_percent">Expected progress (%.1f%%)</string>
-    <string name="progress_label_gcode_percent">Real progress (%.1f%%)</string>
+    <string name="progress_label_time_percent">Expected (%.1f%%)</string>
+    <string name="progress_label_gcode_percent">Real (%.1f%%)</string>
 
     <string name="printing_completed_success_title">Printing ended</string>
     <string name="printing_completed_success_message">Printing ended with success!</string>
